Rejected commit: Default

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,18 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="curl"/>
+    <TextView
+        android:padding="10dp"
+        android:id="@+id/main_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="spinner"/>
+    <TextView
+        android:padding="10dp"
+        android:id="@+id/main_smack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="smack"/>
 </LinearLayout>
