--- a/app/src/main/res/layout/activity_curl.xml
+++ b/app/src/main/res/layout/activity_curl.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.growth.ui.view.CurlView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.growth.modules.curl.CurlView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/curl"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</com.example.growth.ui.view.CurlView>
+</com.example.growth.modules.curl.CurlView>
